; ModuleID = '/home/carl/AnghaBench/streem/src/extr_ns.c_strm_ns_get.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_ns.c_strm_ns_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nstbl = common dso_local global i32 0, align 4
@ns = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @strm_ns_get(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i32, i32* @nstbl, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %22

8:                                                ; preds = %1
  %9 = load i32, i32* @ns, align 4
  %10 = load i32, i32* @nstbl, align 4
  %11 = load i64, i64* %3, align 8
  %12 = call i64 @kh_get(i32 %9, i32 %10, i64 %11)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i32, i32* @nstbl, align 4
  %15 = call i64 @kh_end(i32 %14)
  %16 = icmp eq i64 %13, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %8
  store i32* null, i32** %2, align 8
  br label %22

18:                                               ; preds = %8
  %19 = load i32, i32* @nstbl, align 4
  %20 = load i64, i64* %4, align 8
  %21 = call i32* @kh_value(i32 %19, i64 %20)
  store i32* %21, i32** %2, align 8
  br label %22

22:                                               ; preds = %18, %17, %7
  %23 = load i32*, i32** %2, align 8
  ret i32* %23
}

declare dso_local i64 @kh_get(i32, i32, i64) #1

declare dso_local i64 @kh_end(i32) #1

declare dso_local i32* @kh_value(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
